FPVTL-409 for FPVTL-503 but need to go together and both null pointer exceptions point to correct place use junit5